Fix table width to remove extra white space - v1.7.1

--- a/farm-assistant-addon/static/style.css
+++ b/farm-assistant-addon/static/style.css
@@ -176,7 +176,7 @@ button:hover {
 }
 
 table {
-    width: 100%;
+    width: auto;
     border-collapse: collapse;
     background-color: var(--input-bg);
     border: 1px solid var(--table-border);
